<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_test"
            android:title="@string/tests" />
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_menu_student"
            android:title="@string/students" />
        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_menu_class"
            android:title="@string/classes" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/ic_menu_school"
            android:title="@string/school" />
        <item
            android:id="@+id/nav_forms"
            android:icon="@drawable/ic_menu_form"
            android:title="@string/forms" />
    </group>

    <item android:title="Diğer">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />

        </menu>
    </item>

</menu>
