<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimaryDark"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:background="#fff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/test_title"
                android:ems="10"
                android:id="@+id/testQuestionTitleETV"
                android:maxLength="55"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_test_form"
                android:id="@+id/textView4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/testFormSpinner"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/test_form_choose"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_test_booklet"
                android:id="@+id/textView5"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/testBookletSpinner"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/test_booklet_type"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_test_net"
                android:id="@+id/textView6"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/testNetCalculatorSpinner"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/test_net_calculator"				/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/test_question_count"
                android:ems="10"
                android:id="@+id/testQuestionCountETV"
                android:maxLength="255"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/test_question_point"
                android:id="@+id/testQuestionPointETV"
                android:maxLength="255"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_school_category"
                android:id="@+id/textView7"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <Spinner
                android:id="@+id/testSchoolSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_class_category" />

            <Spinner
                android:id="@+id/testClassSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_save_go_button"
                android:id="@+id/testSaveAndGoButton"
                android:layout_marginTop="10dp"
                android:onClick="addTestAndGo"
                android:background="@drawable/button_olivegreen"
                android:textColor="@color/dark_blue" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_save_button"
                android:id="@+id/testSaveButton"
                android:layout_marginTop="10dp"
                android:onClick="addTest"
                android:background="@drawable/button_orange"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>